--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-import": "^2.29.0",
+		"html-loader": "^4.2.0",
 		"html-webpack-plugin": "^5.5.4",
 		"mini-css-extract-plugin": "^2.7.6",
 		"style-loader": "^3.3.3",
+		"terser-webpack-plugin": "^5.3.10",
 		"webpack": "^5.89.0",
 		"webpack-cli": "^5.1.4",
 		"webpack-dev-server": "^4.15.1",
 		"webpack-merge": "^5.10.0"
+	},
+	"dependencies": {
+		"@aloe_vera/drop-down-func": "^1.1.0"
 	}
 }
