--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-	"name": "top-template-repository",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"startDev": "webpack serve --open",
-		"buildDev": "webpack",
-		"startProd": "webpack serve --open --config webpack.dev.js",
-		"buildProd": "webpack --config webpack.prod.js",
-		"commitOnDist": "git add dist && git commit -m 'Initial dist subtree commit'",
-		"githubPagesDeploy": "git subtree push --prefix dist origin gh-pages"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"css-loader": "^6.8.1",
-		"css-minimizer-webpack-plugin": "^5.0.1",
-		"eslint": "^8.55.0",
-		"eslint-config-airbnb-base": "^15.0.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-import": "^2.29.0",
-		"html-loader": "^4.2.0",
-		"html-webpack-plugin": "^5.5.4",
-		"mini-css-extract-plugin": "^2.7.6",
-		"style-loader": "^3.3.3",
-		"terser-webpack-plugin": "^5.3.10",
-		"webpack": "^5.89.0",
-		"webpack-cli": "^5.1.4",
-		"webpack-dev-server": "^4.15.1",
-		"webpack-merge": "^5.10.0"
-	},
-	"dependencies": {
-		"@aloe_vera/drop-down-func": "^1.1.0"
-	}
+  "name": "progressively-collapsing-menu",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "startDev": "webpack serve --open",
+    "buildDev": "webpack",
+    "startProd": "webpack serve --open --config webpack.dev.js",
+    "buildProd": "webpack --config webpack.prod.js",
+    "commitOnDist": "git add dist && git commit -m 'Initial dist subtree commit'",
+    "githubPagesDeploy": "git subtree push --prefix dist origin gh-pages"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "eslint": "^8.55.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.4",
+    "mini-css-extract-plugin": "^2.7.6",
+    "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
+  },
+  "dependencies": {
+    "@aloe_vera/drop-down-func": "^1.1.0"
+  }
 }
